<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="EcCoeSdo_Par_Read_typ" Id="{c28f1e4e-731e-0e33-087b-617a87929d66}">
    <Declaration><![CDATA[TYPE EcCoeSdo_Par_Read_typ : 	
	STRUCT  (*parameter structure*)
		
        nSubIndex       : BYTE; 
        nIndex          : WORD;
		pDstBuf         : POINTER TO DWORD; 
		cbBufLen        : UDINT; 
		tTimeout        : TIME := DEFAULT_ADS_TIMEOUT; 

	END_STRUCT
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>