<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="ep7xxxBasicAxis_FB" Id="{5e591c83-a41e-4c28-9fcd-59c96779611c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK ep7xxxBasicAxis_FB EXTENDS BeckHoffBasicAxis_FB
VAR_INPUT
	rDriveEnable: 	REFERENCE TO BOOL; // Reference to external drive enable signal
END_VAR
VAR_OUTPUT
END_VAR
VAR
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
AxisCtrlPtr^.Input.Parameter.Drive.eDriveType	:= enumDriveType.eEP70xx;
AxisCtrlPtr^.Input.Parameter.Drive.VendorNameID	:= eVendorNameID.Beckhoff;

SUPER^(AxisRef:=AxisRef);

IF __ISVALIDREF(rDriveEnable) THEN
	AxisCtrlPtr^.Output.Status.DriveEnable	:= rDriveEnable;
ELSE
	AxisCtrlPtr^.Output.Status.DriveEnable	:= TRUE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="ep7xxxBasicAxis_FB">
      <LineId Id="25" Count="1" />
      <LineId Id="36" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="47" Count="2" />
      <LineId Id="51" Count="1" />
      <LineId Id="46" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>